// Copyright 2017 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package download_pb;

// This should stay in sync with the download::DownloadSource enum in
// components/download/public/common/download_source.h.
enum DownloadSource {
  UNKNOWN = 0;
  NAVIGATION = 1;
  DRAG_AND_DROP = 2;
  FROM_RENDERER = 3;
  EXTENSION_API = 4;
  EXTENSION_INSTALLER = 5;
  INTERNAL_API = 6;
  WEB_CONTENTS_API = 7;
  OFFLINE_PAGE = 8;
  CONTEXT_MENU = 9;
  RETRY = 10;
  RETRY_FROM_BUBBLE = 11;
}
